# YouTube_GodMode

./: .dockerignore  .gitignore  LICENSE  README.md  dockerfile  main.py  pyproject.toml  run.sh
app/: main.py
app/routers/: youtube.py
routers/: youtube.py
tests/: test_youtube.py
