[project]
name = "youtube godmode"
version = "0.0.2"
description = "Youtube Tools"
authors = [
    {name = "Thomas Bonnici", email = "thomas.bonnici@icloud.com"},
]
license = {text = "MIT"}
dependencies = [
    "pytube>=15.0.0",
    "moviepy>=1.0.3",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "httpx>=0.27.0",
]
requires-python = ">=3.11"

[project.optional-dependencies]
[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
]

# pyproject.toml
[tool.pytest.ini_options]
addopts = "--cov=app"
testpaths = [
    "tests",
]
